# SecPluginPySdk

./: .gitignore  Demo.py  LICENSE  main.py  pyproject.toml
SecPlugin/: __init__.py  cmd.py  messenger.py  msg.py  plugin.py  webui.py
SecPlugin/frontend/: base.html  index.html
SecPlugin/frontend/assets/: docs.md
data/379303362/1493813167/: memory.json
data/752272122/1493813167/: memory.json
examples/: example.py
plugin/: Messenger.py  Msg.py  SecPlugin.py
src/secplugin/: __init__.py  cmd.py  h.py  logger.py  messenger.py  plugin.py  reload.py  sender.py
tests/: test.py
