[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "secplugin"
description = "WebSocket Plugin Demo for Secluded."
version = "1.2.4"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "SumaRoder", email = "1493813167@qq.com"},
]
keywords = ["websocket", "plugin", "secluded", "demo"]
dependencies = [
    "websockets",
    "typing_extensions",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "black",
    "ruff",
    "colorlog",
]

[project.urls]
Homepage = "https://github.com/SumaRoder/SecPlugin"
Repository = "https://github.com/SumaRoder/SecPlugin"
Issues = "https://github.com/SumaRoder/SecPlugin/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
