[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "secplugin"
description = "WebSocket Plugin Framework for Secluded."
version = "1.2.6"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "SumaRoder", email = "1493813167@qq.com"},
]
keywords = ["websocket", "plugin", "secluded", "demo"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "websockets",
    "typing_extensions",
]

[project.optional-dependencies]
dev = [
    "colorlog",
    "watchdog",
]

[project.urls]
Homepage = "https://github.com/SumaRoder/SecPlugin"
Repository = "https://github.com/SumaRoder/SecPlugin"
Issues = "https://github.com/SumaRoder/SecPlugin/issues"

[tool.setuptools.packages.find]
where = ["src"]
